implement statistics
