# src/routes/index.ts
@@ -1,3 +1,4 @@
 export * from "./quiz.route";
 export * from "./user.route";
 export * from "./quiz-attempt.route";
+export * from "./quiz-statistics.route";
