# src/routes/quiz-statistics.route.ts
@@ -1,0 +1,5 @@
+import { Router } from "express";
+import { getQuizStatistics } from "../controllers/quiz-statistics.controller";
+
+export const quizStatisticsRoute = Router()
+    .get("/:quizId", getQuizStatistics);
